# SurgBenchKit

./: eval.py  extract_test_frames.py  extract_test_frames_parallel.py  full-prompt.md  pyproject.toml  skill.md
config/: config.yaml
config/model/: InternVL3.yaml  MedGemma-4B.yaml  Qwen3-VL-Instruct.yaml  Qwen3-VL-Thinking.yaml  llava_next_vicuna_7b.yaml
config/task/: avos_action_recognition.yaml  cholec80_phase_planning.yaml  cholec80_phase_recognition.yaml  cholec80_tool_recognition.yaml  cholect45_triplet_recognition.yaml  cholect50_phase_planning.yaml  cholect50_phase_recognition.yaml  cholect50_phase_triplet_planning.yaml  cholect50_tool_recognition.yaml  dresden_anatomy_presence.yaml  endoscapes_cvs_assessment.yaml  endoscapes_cvs_assessment_fewshot.yaml  endoscapes_object_detection.yaml  heichole_action_recognition.yaml  heichole_action_recognition_fewshot.yaml  heichole_phase_planning.yaml  heichole_phase_recognition.yaml  heichole_phase_recognition_fewshot.yaml  heichole_skill_assessment.yaml  heichole_tool_recognition.yaml  heichole_tool_recognition_fewshot.yaml  jigsaws_skill_assessment.yaml  multibypass140_phase_recognition.yaml  vtrb_suturing_phase_planning.yaml  vtrb_suturing_recognition.yaml  (+1 more)
scripts/: bbox_sanity_check.py  convert_cholect50_to_cholect45.py  extract_skill_frames.py  gpu_benchmark_inference.py  run_cholec80_endoscapes_all.sh  run_cholect45_all.sh  run_heichole_all.sh  test_all_models.sh  test_model_inference.py
sharedeval/: __init__.py  metrics.py
vlmeval/: bbox_utils.py  config.py  inference_surg.py  prompts.py
webui/: app.py
(+23 files in other folders)
